fixed warning some medthes are deprecated since version 9 and fixed error 2 chains depedency when run server.product